modifiche alla logica del ticketService e Controller per il backend, per adattare il salvataggio dei ticket bozza, rendendoli ticket assegnati e con stato Open.
